--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -55,8 +55,490 @@
 @import "./parts/product-details/tabs";
 @import "./parts/product-details/detail-slider";
 @import "./parts/cards/review-card";
-@import "./parts/product-details/modal-product";
-@import "./parts/product-details/review-form";
+//@import "./parts/product-details/modal-product";
+//@import "./parts/product-details/review-form";
+//
+//
+////BLOG
+//@import "./parts/blog/blog";
+//@import "./parts/cards/blog-card";
+
+.wholesale {
+  color: $black-main;
+  padding-bottom: 240px;
+
+  @include media-w($sm) {
+    padding-bottom: 90px;
+  }
+
+  &__top {
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center right;
+    padding: 54px 0 67px;
+
+    @include media-w($sm) {
+      padding: 30px 0;
+      background-position: 85%;
+    }
+  }
+
+  &__group {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    @include media-w($md) {
+      justify-content: flex-start;
+      padding: 0 15px;
+    }
+  }
+
+  &__logo-wrapper {
+    width: 200px;
+    height: 200px;
+    margin-right: 42px;
+
+    @include media-w($md) {
+      display: none;
+    }
+  }
+
+  &__logo {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
+    object-position: center;
+  }
+
+  &__title {
+    margin: 0;
+    font-family: 'FjallaOne', sans-serif;
+    font-size: 54px;
+    font-weight: 400;
+    letter-spacing: 0.05em;
+    max-width: 611px;
+    line-height: 1.15;
+
+    @include media-w($md) {
+      font-size: 34px;
+      max-width: 490px;
+    }
+
+    @include media-w($sm) {
+      max-width: 320px;
+    }
+  }
+
+  &__info {
+    max-width: 840px;
+    margin: 0 auto;
+    padding: 60px 15px 90px;
+
+    @include media-w($sm) {
+      padding-bottom: 70px;
+    }
+  }
+
+  &__subtitle {
+    font-family: 'FjallaOne', sans-serif;
+    font-weight: 400;
+    font-size: 44px;
+    letter-spacing: 0.03em;
+    margin: 0 0 35px;
+
+    @include media-w($sm) {
+      font-size: 21px;
+      margin: 0 0 15px;
+    }
+  }
+
+  &__text {
+    margin-bottom: 40px;
+
+    @include media-w($sm) {
+      font-size: 16px;
+      margin-bottom: 15px;
+    }
+
+    p {
+      display: inline;
+    }
+
+    span {
+      font-weight: 600;
+      font-size: 20px;
+      letter-spacing: 0.015em;
+
+      @include media-w($sm) {
+        font-size: 16px;
+      }
+    }
+  }
+
+  &__row {
+    display: flex;
+    align-items: center;
+
+    &:not(:last-child) {
+      margin-bottom: 55px;
+
+      @include media-w($sm) {
+        margin-bottom: 45px;
+      }
+    }
+  }
+
+  &__icon {
+    width: 77px;
+    height: 82px;
+    margin-right: 30px;
+    flex: none;
+
+    @include media-w($sm) {
+      margin-right: 18px;
+    }
+  }
+
+  &__img {
+    max-width: 100%;
+    object-fit: contain;
+  }
+
+  &__entity-list {
+    max-width: 680px;
+
+    @include media-w($sm) {
+      font-size: 16px;
+    }
+  }
+
+  &__entities {
+    display: inline;
+  }
+
+  &__entity {
+    display: inline-block;
+    margin-left: 5px;
+
+    @include media-w($sm) {
+      display: inline;
+      margin-left: 0;
+    }
+  }
+
+  &__consulting {
+    border: 10px solid $orange70;
+    padding: 60px 120px 0;
+
+    @include media-w($sm) {
+      padding: 40px 20px 0;
+    }
+  }
+
+  &__wrapper {
+    max-width: 1050px;
+    margin: 0 auto 130px;
+    padding: 0 15px;
+
+    @include media-w($sm) {
+      margin-bottom: 100px;
+    }
+  }
+
+  &__bottom {
+    max-width: 840px;
+    margin: 0 auto;
+    padding: 0 15px;
+  }
+
+  &__btn-wrapper {
+    display: none;
+    justify-content: center;
+    transform: translateY(35px);
+
+    @include media-w($md) {
+      display: flex;
+    }
+  }
+
+  &__consulting-btn {
+    @include media-w($xs) {
+      min-width: 220px;
+    }
+  }
+
+  &__modal-wrapper {
+    opacity: 0;
+    pointer-events: none;
+    position: fixed;
+    overflow: auto;
+    top: 64px;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #fff;
+    transition: opacity 0.5s;
+
+    &--active {
+      opacity: 1;
+      pointer-events: all;
+
+      .wholesale__consulting {
+        border: none;
+        padding: 10px;
+      }
+
+      .consulting-form__form {
+        display: block;
+      }
+
+      .wholesale__consulting-btn {
+        display: none;
+      }
+
+      .consulting-form__title {
+        display: none;
+      }
+
+      .consulting-form__top {
+        margin-bottom: 40px;
+      }
+    }
+  }
+}
+
+.consulting-form {
+  &__top {
+    text-align: center;
+    margin-bottom: 90px;
+
+    @include media-w($md) {
+      margin-bottom: 0;
+    }
+  }
+
+  &__title {
+    font-family: 'FjallaOne', sans-serif;
+    font-size: 44px;
+    font-weight: 400;
+    letter-spacing: 0.03em;
+    margin: 0 0 5px;
+
+    @include media-w($sm) {
+      font-size: 30px;
+    }
+  }
+
+  &__form {
+    @include media-w($md) {
+      display: none;
+    }
+  }
+
+  &__text {
+    max-width: 690px;
+    color: #000;
+
+    @include media-w($sm) {
+      font-size: 16px;
+    }
+  }
+
+  &__row {
+    display: flex;
+    align-items: center;
+
+    &:not(:last-child) {
+      margin-bottom: 60px;
+
+      @include media-w($md) {
+        margin-bottom: 50px;
+        align-items: flex-start;
+      }
+    }
+
+    @include media-w($md) {
+      flex-direction: column;
+    }
+  }
+
+  &__label {
+    flex: 1;
+
+    &:not(:last-child) {
+      margin-right: 60px;
+
+      @include media-w($md) {
+        margin-right: 0;
+        margin-bottom: 50px;
+      }
+    }
+
+    &--text {
+      @include media-w($md) {
+        margin-bottom: 10px !important;
+      }
+
+    }
+
+    @include media-w($md) {
+      width: 100%;
+    }
+  }
+
+  &__input {
+    width: 100%;
+  }
+  
+  &__message {
+    flex: 1;
+    font-size: 14px;
+    color: $blue60;
+  }
+
+  &__dropdown {
+    flex: 1;
+    position: relative;
+
+    &:not(:last-child) {
+      margin-right: 60px;
+
+      @include media-w($md) {
+        margin-right: 60px;
+        margin-bottom: 50px;
+      }
+    }
+
+    @include media-w($md) {
+      width: 100%;
+    }
+  }
+
+  &__choose {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    background-color: transparent;
+    padding: 15px 20px 15px 30px;
+    border: 1px solid $black-main;
+
+    &--active {
+      .consulting-form__choice {
+        opacity: 0;
+      }
+
+      .consulting-form__dot {
+        background-color: $green60;
+      }
+    }
+  }
+
+  &__dot {
+    width: 4px;
+    height: 4px;
+    background-color: $black-main;
+    margin-left: auto;
+    border-radius: 50%;
+  }
+
+  &__choice {
+    color: $grey63;
+  }
+
+  &__btn-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  &__submit {
+    transform: translateY(35px);
+
+    @include media-w($md) {
+      transform: translateY(0);
+      margin-top: 100px;
+      min-width: 300px;
+    }
+  }
+}
+
+.affiliate-program {
+  &__title {
+    font-size: 24px;
+    font-weight: bold;
+    letter-spacing: 0.02em;
+    margin-bottom: 40px;
+  }
+
+  &__text {
+    @include media-w($sm) {
+      font-size: 16px;
+    }
+
+    p {
+      &:not(:last-child) {
+        margin-bottom: 40px;
+      }
+    }
+  }
+
+  &__link {
+    font-weight: 600;
+    font-size: 20px;
+    letter-spacing: 0.015em;
+    text-decoration-line: underline;
+    color: $green60;
+
+    @include media-w($sm) {
+      font-weight: 400;
+      font-size: 16px;
+    }
+  }
+}
+
+.modal-wholesale {
+  color: $black-main;
+
+  &__title {
+    margin: 0;
+    font-weight: 500;
+    font-size: 16px;
+  }
+
+  &__group {
+    display: flex;
+    align-items: center;
+    background-color: $blue-bg;
+    padding: 15px 25px;
+  }
+
+  &__btn {
+    margin-right: 18px;
+    background-color: transparent;
+    border: none;
+  }
+
+  &__svg {
+    width: 15px;
+    height: 15px;
+    vertical-align: middle;
+  }
+}
+
+.success-modal {
+  opacity: 0;
+  pointer-events: none;
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+
+  &--active {
+    opacity: 1;
+  }
+}
 
 //BLOG
 @import "./parts/blog/blog";
@@ -272,5 +754,3 @@
     flex: 0 1 calc(33.333% - 66px);
   }
 }
-
-
